--- a/CarRental/CarRental.csproj
+++ b/CarRental/CarRental.csproj
@@ -19,4 +19,12 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Views\" />
+    <Folder Include="Areas\Customer\Views\" />
+    <Folder Include="Areas\Guest\Controllers\" />
+    <Folder Include="Areas\Guest\Views\" />
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 </Project>
