--- a/CarRental/CarRental.csproj
+++ b/CarRental/CarRental.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\Guest\**" />
+    <Content Remove="Areas\Guest\**" />
+    <EmbeddedResource Remove="Areas\Guest\**" />
+    <None Remove="Areas\Guest\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
       <PrivateAssets>all</PrivateAssets>
@@ -17,12 +24,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Areas\Customer\Views\" />
-    <Folder Include="Areas\Guest\Controllers\" />
-    <Folder Include="Areas\Guest\Views\" />
   </ItemGroup>
 
 </Project>
