--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CarRentalSystem": "Server=(localdb)\\MSSQLLocalDB;Database=CarRentalDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "CarRentalSystem": "Server=(localdb)\\MSSQLLocalDB;Database=CardefRentalDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
