--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CarRentalSystem": "Server=(localdb)\\MSSQLLocalDB;Database=CardefRentalDB_2;Trusted_Connection=True;TrustServerCertificate=True;"
+    "CarRentalSystem": "Server=localhost\\SQLEXPRESS;Database=CardefRentalDB_2;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
