--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "CarRentalSystem": "Server=localhost\\SQLEXPRESS;Database=CardefRentalDB_2;Trusted_Connection=True;TrustServerCertificate=True;"
-  }
+    "ConnectionStrings": {
+        "CarRentalSystem": "Server=(localdb)\\MSSQLLocalDb;Database=CardefRentalDB_3;Trusted_Connection=True;TrustServerCertificate=True;"
+    }
 }
