--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "CarRentalSystem": "Server=(localdb)\\MSSQLLocalDB;Database=CardefRentalDB_4;Trusted_Connection=True;TrustServerCertificate=True;"
+    "CarRentalSystem": "Server=DESKTOP-AMVB36P\\SQLEXPRESS;Database=CardefRentalDB_4;Trusted_Connection=True;TrustServerCertificate=True;" 
   }
 
 }
